@@ -2,7 +2,7 @@
 #  These guys are in subdirectory 'tools'
 #
 set(ALL_TOOLS pthread root python boost boostnumpy
-    blas lapack gsl sprng sla libarchive
+    blas lapack gsl sprng pal libarchive
     mysql mpi suitesparse ncurses cdk
     cfitsio healpix qt4 hdf5 minuit2 clhep geant4 zlib
     opencl gmp log4cpp xml2 genie zmq doxygen
